# ceres-tests

./: .gitignore  CMakeLists.txt
scripts/: setup.sh
tests/: mocap_calibration_test.cpp  mocap_wand_calibration_test.cpp
